--- a/pages/placeholder.html
+++ b/pages/placeholder.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Thomas Gettler</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../assets/styles/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/styles/global.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/styles/placeholder.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Thomas Gettler About</title>
+    <link rel="icon" type="image/jpg" href="./assets/media/logo.jpg">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/styles/global.css">
+    <link rel="stylesheet" href="./assets/styles/about.css">
 </head>
-<body>
-        <!--Create the top menu-->
-        <div class="header">
-                <h1>Thomas Gettler</h1>
-                <!--Create the buttons on the right side-->
-                <div class="menu">
-                    <section><a href="./contact.html">Contact</a></section>
-                    <!--Create a vertical line-->
-                    <div class="vl"></div>
-                    <section><a href="./portfolio.html">Portfolio</a></section>
-                    <div class="vl"></div>
-                    <section><a href="../index.html">About</a></section>
-                </div>
-        </div>    
 
-        <div class="subject" >
-                <!--Create a placeholder saying the project is not ready-->
-                <img src="../assets/media/underconstruction.png" height="75%" />
-                <p>Please be patient while we work to make these fake apps real.</p>
+<body>
+    <!--Create the header-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="header col-12 d-inline-flex flex-wrap">
+                <h1 class="col-sm-12 col-md-6 float-left mt-auto">Thomas Gettler</h1>
+                <!--Create the buttons on the right side-->
+                <div class="menu col-sm-12 col-md-6 float-right mt-auto">
+                        <ul class="nav nav-fill">
+                                <li class="nav-item">
+                                <a class="nav-link active" href="#">About</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./pages/portfolio.html">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./pages/contact.html">Contact</a>
+                                </li>
+                            </ul>
+                </div>
+            </div>
+        </div>    
+    </div>
+
+    <!--Create the placeholder-->
+
+    <!--Create the footer-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 text-center fixed-bottom">
+                <hr />
+                <div class="menu">
+                    <a href="https://www.linkedin.com/in/thomasgettler" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="https://github.com/tcgettler" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                </div>
+            </div> 
         </div>
+    </div>
 </body>
 </html>
