--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,86 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Thomas Gettler</title>
-    <link rel="icon" type="image/jpg" href="../assets/media/logo.jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../assets/styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="../assets/styles/global.css"/>
-    <link rel="stylesheet" type="text/css" href="../assets/styles/portfolio.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Thomas Gettler About</title>
+    <link rel="icon" type="image/jpg" href="./assets/media/logo.jpg">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/styles/global.css">
+    <link rel="stylesheet" href="../assets/styles/about.css">
 </head>
+
 <body>
-        <!--Create the top menu-->
-        <div class="header">
-                <h1>Thomas Gettler</h1>
+    <!--Create the header-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="header col-12 d-inline-flex flex-wrap">
+                <h1 class="col-sm-12 col-md-6 float-left mt-auto">Thomas Gettler</h1>
                 <!--Create the buttons on the right side-->
-                <div class="menu">
-                    <section><a href="./contact.html">Contact</a></section>
-                    <!--Create a vertical line-->
-                    <div class="vl"></div>
-                    <section id="current">Portfolio</section>
-                    <div class="vl"></div>
-                    <section><a href="../index.html">About</a></section>
+                <div class="menu col-sm-12 col-md-6 float-right mt-auto">
+                        <ul class="nav nav-fill">
+                                <li class="nav-item">
+                                <a class="nav-link active" href="../index.html">About</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="#">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="./contact.html">Contact</a>
+                                </li>
+                            </ul>
                 </div>
+            </div>
         </div>    
+    </div>
 
-        <!--Create the content in center of the page -->
-        <div class="subject" >
-               <!--Create a box of an image, title, and description-->
-               <div class="app"><a href="./placeholder.html">
-                    <img src="../assets/media/app1.png" width="200px" height="200px"/>
-                    <!--Group text for one text-box.-->
-                    <section class="textbox">
-                        <h4>Nuclear Costs</h4>
-                        <P>Learn what it would be like to cause a nuclear holocaust.</P>
-                    </section></a>
+    <!--Create the portolio links-->
+    <div class="containter-fluid">
+        <div class="row">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-
-                <div class="app"><a href="placeholder.html">
-                    <img src="../assets/media/app2.jpg" width="200px" height="200px"/>
-                    <!--Group text for one text-box.-->
-                    <section class="textbox">
-                        <h4>Create Rain</h4>
-                        <P>Send apps to the cloud to create showers to stop droughts.</P>
-                    </section></a>    
-                </div>
-
-                <div class="app"><a href="placeholder.html">
-                    <img src="../assets/media/app3.jpg" width="200px" height="200px"/>
-                        <!--Group text for one text-box.-->
-                        <section class="textbox">
-                            <h4>Inner Animal</h4>
-                            <P>Search in yourself and discover your fursona.  Get your furry on.</P>
-                        </section></a>    
-                </div>
-
-                <div class="app"><a href="placeholder.html">
-                    <img src="../assets/media/app4.jpg" width="200px" height="200px"/>
-                    <!--Group text for one text-box.-->
-                    <section class="textbox">
-                        <h4>Pixelate Me</h4>
-                        <p>Pixelate your photos with this app become an 8-bit hero.</p>
-                    </section></a>
-                </div>
-
-                <div class="app"><a href="placeholder.html">
-                        <img src="../assets/media/app5.jpg" width="200px" height="200px"/>
-                            <!--Group text for one text-box.-->
-                        <section class="textbox">
-                            <h4>Mixologist</h4>
-                            <P>Be the life of the party by getting drink recipes from mixologists.</P>
-                        </section></a>    
-                </div>
-
-                <div class="app"><a href="placeholder.html">
-                        <img src="../assets/media/app6.jpg" width="200px" height="200px"/>
-                            <!--Group text for one text-box.-->
-                        <section class="textbox">
-                            <h4>Summon Fall</h4>
-                            <P>Join witches to bring about the season of Pumpkin Spiced Lattes.</P>
-                    </section></a>    
-                </div>
+            </div>
         </div>
+    </div>
+    <!--Create the footer-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 text-center fixed-bottom">
+                <hr />
+                <div class="menu">
+                    <a href="https://www.linkedin.com/in/thomasgettler" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="https://github.com/tcgettler" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                </div>
+            </div> 
+        </div>
+    </div>
 </body>
 </html>
