--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="row">
             <div class="d-sm-none d-md-block col-md-1"></div>
             <div class="subject col-sm-12 col-md-10">
-                <div class="col-sm-12 col-md-4 float-left">
+                <div class="col-sm-12 col-md-4 col-lg-6 float-left">
                     <img src="./assets/media/portrait.jpg" class="img-fluid" alt="portrait"/>
                 </div>
-                <div class="about col-sm-12 col-md-8 float-right">
+                <div class="about col-sm-12 col-md-8 col-lg-6 float-right">
                     <div class="row">
                         <div class="col-12 text-center">
                             <h3>About Me:</h3>
