--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,21 +41,21 @@
         <div class="row">
             <div class="d-sm-none d-md-block col-md-1"></div>
             <div class="subject col-sm-12 col-md-10">
-                <form>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Name:</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Email</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                    </div>
-                    <div class="form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Name:</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name.">
+                        </div>
+                        <div class="form-group">
                             <label for="formGroupExampleInput2">Email</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary text-right">Submit</button>
-                </form>
+                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your email.">
+                        </div>
+                        <div class="form-group">
+                                <label for="formGroupExampleInput2">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary text-right">Submit</button>
+                    </form>
             </div>
         </div>
     </div>
