--- a/pages/placeholder.html
+++ b/pages/placeholder.html
@@ -7,9 +7,9 @@
     <title>Thomas Gettler About</title>
     <link rel="icon" type="image/jpg" href="./assets/media/logo.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/styles/global.css">
-    <link rel="stylesheet" href="./assets/styles/about.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/styles/global.css">
+    <link rel="stylesheet" href="../assets/styles/placeholder.css">
 </head>
 
 <body>
@@ -22,13 +22,13 @@
                 <div class="menu col-sm-12 col-md-6 float-right mt-auto">
                         <ul class="nav nav-fill">
                                 <li class="nav-item">
-                                <a class="nav-link active" href="#">About</a>
+                                <a class="nav-link" href="../index.html">About</a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="./pages/portfolio.html">Portfolio</a>
+                                <a class="nav-link" href="./portfolio.html">Portfolio</a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="./pages/contact.html">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                                 </li>
                             </ul>
                 </div>
@@ -37,7 +37,16 @@
     </div>
 
     <!--Create the placeholder-->
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="d-sm-none d-md-block col-md-1"></div>
+            <div class="subject col-sm-12 col-md-10">
+                <div class="d-sm-none d-md-block col-md-1"></div>
+                <img src="../assets/media/underconstruction.png" class="col-sm-12 col-md-6" alt="under construction" />
+                <p class="text-center">Please be patient while we make these fake apps real.</p>    
+            </div>
+        </div>
+    </div>
     <!--Create the footer-->
     <div class="container-fluid">
         <div class="row">
