--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thomas Gettler About</title>
-    <link rel="icon" type="image/jpg" href="./assets/media/logo.jpg">
+    <link rel="icon" type="image/jpg" href="../assets/media/logo.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/styles/global.css">
-    <link rel="stylesheet" href="../assets/styles/about.css">
+    <link rel="stylesheet" href="../assets/styles/portfolio.css">
 </head>
 
 <body>
@@ -20,34 +20,85 @@
                 <h1 class="col-sm-12 col-md-6 float-left mt-auto">Thomas Gettler</h1>
                 <!--Create the buttons on the right side-->
                 <div class="menu col-sm-12 col-md-6 float-right mt-auto">
-                        <ul class="nav nav-fill">
-                                <li class="nav-item">
-                                <a class="nav-link active" href="../index.html">About</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="#">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                <a class="nav-link" href="./contact.html">Contact</a>
-                                </li>
-                            </ul>
+                    <ul class="nav nav-fill">                                
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>    
     </div>
 
     <!--Create the portolio links-->
-    <div class="containter-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+            <div class="d-sm-none d-md-block col-md-1"></div>
+            <div class="subject col-sm-12 col-md-10">
+                <a href="placeholder.html"> 
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Nuclear Costs</h5>
+                            <p class="card-text">Learn the costs of causing a nuclear holocaust.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="placeholder.html"> 
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Create Rain</h5>
+                            <p class="card-text text-center">Send apps to the cloud to create showers to stop droughts.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="placeholder.html"> 
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app3.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Inner Animal</h5>
+                            <p class="card-text">Search in yourself and discover your spirit animal.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="placeholder.html"> 
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app4.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Pixelate Me</h5>
+                            <p class="card-text">Pixelate your photos with this app become an 8-bit hero.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="placeholder.html"> 
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app5.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Mixologist</h5>
+                            <p class="card-text">Be the life of the party by getting drink recipes from mixologists.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="placeholder.html">
+                    <div class="card col-sm-12 col-md-4 col-lg-3" >
+                        <img class="card-img-top" src="../assets/media/app6.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Summon Fall</h5>
+                            <p class="card-text">Join witches to bring about the season of Pumpkin Spiced Lattes.</p>
+                        </div>
+                    </div>    
+                </a>
             </div>
         </div>
     </div>
+
     <!--Create the footer-->
     <div class="container-fluid">
         <div class="row">
